--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "dependencies": {
+    "@google-cloud/redis": "^3.2.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "memorystore": "^1.6.7",
+    "mongodb": "^4.14.0",
+    "mongoose": "^6.3.0",
+    "mongosh": "^1.3.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
